<resources>
    <string name="app_name">AplicacionMusical_Actividad1_Robson_1EVA</string>
    <string name="songTitle">Sangria</string>
    <string name="songArtist">Alx Beats</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="backward">backward</string>
    <string name="forward">forward</string>
    <string name="buttonFav">button to add to favourite songs</string>
    <string name="buttonLoop">button to loop mode</string>
    <string name="currentSongMinute">0:00</string>
    <string name="totalSongMinute">2:42</string>
</resources>